[package]
name = "backend-linker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
incremental = true

[dependencies]
actix-web = "4.0.0"
actix-rt="2.2.0"
# Env logger depends on log
# Env logger allows us to dynamically lift or lower logging params easily at run time
log="0.4.16"
env_logger = "0.9.0"
# The forever present dot env
dotenv = "0.15.0"
# does json handling
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
#ORM
#diesel = { version = "1.4.4", features = ["postgres"] }
chrono = "0.4.19"